# claude-admin

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  install.sh  plans-registry.template.json  rustfmt.toml  uninstall.sh
.cargo/: config.toml
.claude/: gates.json
.github/workflows/: ci.yml
claude_admin/crates/daemon/src/: config.rs  logging.rs  main.rs  pid.rs  socket.rs
claude_admin/plans/: LONG_PLAN.md
crates/ca/: Cargo.toml
crates/ca-daemon/: Cargo.toml
crates/ca-daemon/migrations/: 0001_init.sql
crates/ca-daemon/src/: db.rs  main.rs  rpc.rs  socket.rs
crates/ca-daemon/tests/: rpc.rs  socket.rs
crates/ca-daemon/tests/common/: mod.rs
crates/ca-lib/: Cargo.toml
crates/ca-lib/src/: architector.rs  commit.rs  config.rs  critique.rs  db.rs  discovery.rs  events.rs  git.rs  git_ops.rs  github.rs  hook_install.rs  hooks.rs  ipc.rs  lib.rs  migrations.rs  models.rs  notify.rs  orchestrator.rs  plan.rs  plan_version.rs  project.rs  remote.rs  resource.rs  review.rs  rpc.rs  settings.rs  spawn.rs  state.rs  task.rs  tmux.rs  workspace.rs
crates/ca-tui/: Cargo.toml
crates/ca-tui/src/: main.rs
crates/ca/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  review_html.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: db.rs  logging.rs  main.rs  models.rs  notifier.rs  pid.rs  polling.rs  socket.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  command_palette.rs  commands.rs  doc_view.rs  form.rs  git_view.rs  help.rs  input.rs  main.rs  plan_view.rs  project_view.rs  resource_view.rs  review_view.rs  ui.rs
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
plans/: CURRENT.md  elegant-moseying-dragon.md  high-level-design.md  step-2.2-2.3-session-monitoring.md
scripts/: build-pr-bundle.sh  claude-admin-hook.sh  test-runtime.sh
skills/_lib/: prd_validator.py  slice_enricher.py  test_prd_validator.py  test_slice_enricher.py
skills/_runtime/: backend.py  constants.py  tmux_runtime.py  types.py
skills/_runtime/tests/: conftest.py  fake_llm.py  test_backend.py  test_tmux_runtime.py
skills/analyze/: SKILL.md
skills/analyze/scripts/: analyze.py  test_analyze.py
skills/breakdown/: SKILL.md
skills/breakdown/references/: registry-format.md
skills/breakdown/templates/: issue.md  task.md
skills/cc-help/: SKILL.md
skills/cc-help/scripts/: render.py
skills/cc-help/tests/: test_render.py
skills/cc-review/: SKILL.md
skills/cc-review/prompts/: architecture.md  tests.md
skills/cc-review/scripts/: aggregate.py  run.sh
skills/coder/: SKILL.md
skills/coder-dispatch/: SKILL.md
skills/critic/: SKILL.md
skills/critic/prompts/: agent.md
skills/critic/scripts/: aggregate.py  run.sh
skills/dispatch/: SKILL.md
skills/dispatch/scripts/: dispatch.py  watcher.py
skills/distill-lessons/: SKILL.md
skills/distill-lessons/prompts/: distill.md
skills/distill-lessons/scripts/: run.sh
skills/grill-me/: SKILL.md
skills/grill-with-docs/: SKILL.md
skills/grill-with-docs/scripts/: constants.py  doc_parsing.py  grill_docs.py  models.py
skills/grill-with-docs/tests/: conftest.py  test_audit.py  test_doc_parsing.py  test_freshness.py
skills/improver/: SKILL.md
skills/pr-babysit/: SKILL.md
skills/pr-babysit/scripts/: pr_babysit.py  run.sh
skills/pr-decide/: SKILL.md
skills/pr-decide/scripts/: pr_decide.py
skills/q-goals/: SKILL.md
skills/q-goals/scripts/: q_goals.py  test_q_goals.py
skills/q-goals/scripts/templates/: goals.md.template  validations.md.template
skills/review/: SKILL.md
skills/review/prompts/: bulletproof.md
skills/review/scripts/: aggregate.py  run.sh
skills/reviewer/: SKILL.md
skills/revisit/: SKILL.md
skills/suggest/: SKILL.md
skills/suggest/scripts/: suggest.py
skills/test-builder/: SKILL.md
skills/to-issues/: SKILL.md
skills/to-prd/: SKILL.md
tests/golden/: run.sh
tests/golden/fixture-quality-bad-goal-met/: pr-diff.patch  pr-stats.txt  repo-map.md
tests/golden/fixture-quality-good-goal-missed/: pr-context.md  pr-diff.patch  pr-stats.txt
v1_orchestrator/: 00-final-plan.html  milestones.json
v1_orchestrator/breakdowns/: M0.md  M1.md
v2_design/: 00-final-plan.html  02-workflow.html  03-data-model.html  04-agents.html  06-ui-shell.html  09-ui-breakdown.html  10-ui-pr-review.html  _mermaid-init.js  _sidebar.html  milestones.json  ui-shell.css  v2-orchestrator-architecture.md
v2_design/breakdowns/: M0a.md
v2_design/web_ui_future/: 00-final-plan.html  01-system-overview.html  05-roadmap.html  07-ui-dashboard.html  08-ui-plan.html  11-ui-session-live.html  index.html  theme.css
