[workspace]
resolver = "2"
members = ["crates/ca-lib", "crates/cli", "crates/daemon", "crates/tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_unsafe = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
