[package]
name = "ca-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local orchestrator daemon for the claude_admin v1 stack"

[[bin]]
name = "ca-daemon"
path = "src/main.rs"

[dependencies]
ca-lib.workspace = true
