[package]
name = "ca-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local orchestrator daemon for the claude_admin v1 stack"

[[bin]]
name = "ca-daemon"
path = "src/main.rs"

[dependencies]
ca-lib.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "io-util",
    "time",
    "sync",
] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
libc = "0.2"
tokio = { workspace = true, features = ["process"] }
sqlx.workspace = true
