[package]
name = "ca-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tokio = { version = "1", features = ["net", "io-util"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
