[package]
name = "ca"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI entry point for humans and architectors talking to ca-daemon"

[[bin]]
name = "ca"
path = "src/main.rs"

[dependencies]
ca-lib.workspace = true
