[package]
name = "daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "daemon"
path = "src/main.rs"

[[bin]]
name = "scan_panes"
path = "src/bin/scan_panes.rs"

[dependencies]
ca-lib = { path = "../ca-lib" }
tokio = { version = "1", features = ["full", "signal"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
