[package]
name = "tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "claude-admin-tui"
path = "src/main.rs"

[dependencies]
ca-lib = { path = "../ca-lib" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt", "macros", "time"] }
dirs = "5"
